@@ -214,28 +214,31 @@ my $build = OpenGuides::Build->new(
     dist_version_from => "wiki.cgi",
     license => "perl",
     requires => {
-        'Algorithm::Diff' => '0.13', # for sdiff 
-	'CGI' => '2.42', # unescape not in early versions, Dom says use this
-	'CGI::Carp' => 0,
-	'CGI::Cookie' => 0,
-	'CGI::Wiki' => '0.49',
-	'CGI::Wiki::Formatter::UseMod' => '0.09',
-        'CGI::Wiki::Plugin::Categoriser' => 0,
-	'CGI::Wiki::Plugin::Diff' => 0,
-	'CGI::Wiki::Plugin::GeoCache' => 0,
-	'CGI::Wiki::Plugin::Locator::UK' => '0.06',
+        'Algorithm::Diff'                 => '0.13', # for sdiff 
+	'CGI'                             => '2.42', # unescape not in early versions, Dom says use this
+	'CGI::Carp'                       => 0,
+	'CGI::Cookie'                     => 0,
+	'CGI::Wiki'                       => '0.49',
+	'CGI::Wiki::Formatter::UseMod'    => '0.09',
+        'CGI::Wiki::Plugin::Categoriser'  => 0,
+	'CGI::Wiki::Plugin::Diff'         => 0,
+	'CGI::Wiki::Plugin::GeoCache'     => 0,
+	'CGI::Wiki::Plugin::Locator::UK'  => '0.06',
 	'CGI::Wiki::Plugin::RSS::ModWiki' => '0.02',
-	'Config::Tiny' => 0,
-	'Data::Dumper' => 0,
-        $drivers{$dbtype} => 0,
-	'File::Spec::Functions' => 0,
-	'Geography::NationalGrid' => 0,
-	'Parse::RecDescent' => 0,
-	'Search::InvertedIndex' => 0,
-	'Template' => 0,
-        'Test::MockObject' => '0.07', # earlier doesn't use 'mock'
-	'Time::Piece' => 0,
-	'URI::Escape' => 0,
+        'CGI::Wiki::Plugin::RSS::Reader'  => 0,
+	'Config::Tiny'                    => 0,
+	'Data::Dumper'                    => 0,
+        $drivers{$dbtype}                 => 0,
+	'File::Spec::Functions'           => 0,
+	'Geography::NationalGrid'         => 0,
+        'LWP::Simple'                     => 0,
+	'Parse::RecDescent'               => 0,
+	'Search::InvertedIndex'           => 0,
+	'Template'                        => 0,
+        'Test::MockObject'                => '0.07', # earlier doesn't use 'mock'
+	'Time::Piece'                     => 0,
+	'URI::Escape'                     => 0,
+        'XML::RSS'                        => 0,
 	},
     build_requires => {
         'Module::Build' => '0.18', # earlier doesn't install script files
