@@ -12,6 +12,7 @@ CGI::Wiki::Plugin::Diff
 CGI::Wiki::Plugin::GeoCache
 CGI::Wiki::Plugin::Locator::UK (version 0.06 or later)
 CGI::Wiki::Plugin::RSS::ModWiki (version 0.02 or later)
+CGI::Wiki::Plugin::RSS::Reader
 Config::Tiny
 Data::Dumper
 (
@@ -23,6 +24,7 @@ Data::Dumper
 )
 File::Spec::Functions
 Geography::NationalGrid
+LWP::Simple
 Module::Build (version 0.18 or later)
 Parse::RecDescent
 Search::InvertedIndex
@@ -30,3 +32,4 @@ Template
 Test::MockObject (version 0.07 or later)
 Time::Piece
 URI::Escape
+XML::RSS
